# UniversalConverterReact

./: .gitmodules  README.md  compose.yml
Backend/: CMakeLists.txt  Dockerfile  main.cpp
Backend/core/: BigInteger.h  Fraction.h
Backend/src/: BigInteger.cpp  Fraction.cpp
Frontend/: Dockerfile  package-lock.json  package.json
Frontend/src/: API.ts
Frontend/src/components/AppBar/: MainAppBar.tsx
Frontend/src/components/Drawer/: MainDrawer.tsx
Frontend/src/pages/: pagesData.tsx  router.tsx
Frontend/src/pages/UniversalConverter/: UniversalConverter.tsx
